// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InternalTableBody /> renders snapshot correctly 1`] = `
<div>
  <table>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-hover"
        style="height: 55px; cursor: initial;"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="position: sticky; left: 0px; background: white; width: 20px; z-index: 100; border-right: 1px solid #eee; padding-right: 16px; text-align: center;"
        >
          <button
            aria-haspopup="true"
            class="MuiButtonBase-root MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          true
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          com.myspace.mortgage_app.Application@15f103e7	
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Human Resources
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Final Approval
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Test
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Reserved
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          false
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span>
            10/12/2016
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span>
            10/12/2016
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          150
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Mortgage_Process.MortgageApprovalProcess
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -1
        </td>
      </tr>
      <tr
        class="MuiTableRow-root MuiTableRow-hover"
        style="height: 55px; cursor: initial;"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="position: sticky; left: 0px; background: white; width: 20px; z-index: 100; border-right: 1px solid #eee; padding-right: 16px; text-align: center;"
        >
          <button
            aria-haspopup="true"
            class="MuiButtonBase-root MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          true
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          com.myspace.mortgage_app.Application@3423423	
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Human Resources
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Final Approval
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Test
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Reserved
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          false
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span>
            10/12/2016
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span>
            10/12/2016
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          150
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Mortgage_Process.MortgageApprovalProcess
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -1
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<InternalTableBody /> renders snapshot correctly with emptyRows 1`] = `
<div>
  <table>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-hover"
        style="height: 55px; cursor: initial;"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="position: sticky; left: 0px; background: white; width: 20px; z-index: 100; border-right: 1px solid #eee; padding-right: 16px; text-align: center;"
        >
          <button
            aria-haspopup="true"
            class="MuiButtonBase-root MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          true
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          com.myspace.mortgage_app.Application@15f103e7	
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Human Resources
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Final Approval
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Test
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Reserved
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          false
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span>
            10/12/2016
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span>
            10/12/2016
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          150
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Mortgage_Process.MortgageApprovalProcess
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -1
        </td>
      </tr>
      <tr
        class="MuiTableRow-root MuiTableRow-hover"
        style="height: 55px; cursor: initial;"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          style="position: sticky; left: 0px; background: white; width: 20px; z-index: 100; border-right: 1px solid #eee; padding-right: 16px; text-align: center;"
        >
          <button
            aria-haspopup="true"
            class="MuiButtonBase-root MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          true
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          com.myspace.mortgage_app.Application@3423423	
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Human Resources
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Final Approval
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Test
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Reserved
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          false
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span>
            10/12/2016
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          <span>
            10/12/2016
          </span>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          150
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Mortgage_Process.MortgageApprovalProcess
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          -1
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
        style="height: 165px;"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
      </tr>
    </tbody>
  </table>
</div>
`;
